# ddelta

./: .gitignore  CMakeLists.txt  README.md  ddelta_generate.c
.devcontainer/: devcontainer.json
